Major Change checkNum() removed and replaced with a for loop array check.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   </head>
   <div id="gameBoard">
     <div class="row" id="mainGuess">
-      <input class="numGuess" id="num0" onchange="checkNum(this)">
-      <input class="numGuess" id="num1" onchange="checkNum(this)">
-      <input class="numGuess" id="num2" onchange="checkNum(this)">
-      <input class="numGuess" id="num3" onchange="checkNum(this)">
+      <input class="numGuess" id="num0">
+      <input class="numGuess" id="num1">
+      <input class="numGuess" id="num2">
+      <input class="numGuess" id="num3">
+    </div>
+    <div class="btn" onclick="checkAnswer()">
+      <p>Check Number</p>
     </div>
   </div>
   <body>
