Finish checkWin() Working on resetGame()

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </div>
     <div class="row" id="mainGuess">
       <form>
-        <input class="numGuess" id="num0" min="0" max="9">
-        <input class="numGuess" id="num1" min="0" max="9">
-        <input class="numGuess" id="num2" min="0" max="9">
-        <input class="numGuess" id="num3" min="0" max="9">
+        <input class="numGuess" id="num0" min="0" max="9" autocomplete="off">
+        <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
+        <input class="numGuess" id="num2" min="0" max="9" autocomplete="off">
+        <input class="numGuess" id="num3" min="0" max="9" autocomplete="off">
         <div class="btn" onclick="checkAnswer()">
           <p>Check Number</p>
         </div>
