--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
         <input class="numGuess" id="num2" min="0" max="9" autocomplete="off">
         <input class="numGuess" id="num3" min="0" max="9" autocomplete="off">
-        <div class="btn" onclick="checkAnswer()">
+        <div class="btn" onclick="checkAnswer(event)">
           <p>Check Number</p>
         </div>
       </form>
