--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/master.css">
-    <title>Mastah Mynd</title>
-  </head>
-  <div id="gameBoard">
-    <div class="attemptBox">
-      <p id="attemptBox"></p>
-    </div>
-    <div class="row" id="mainGuess">
-      <form>
-        <input class="numGuess" id="num0" min="0" max="9" autocomplete="off">
-        <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
-        <input class="numGuess" id="num2" min="0" max="9" autocomplete="off">
-        <input class="numGuess" id="num3" min="0" max="9" autocomplete="off">
-        <div class="btn" onclick="checkAnswer(event)">
-          <p>Check Number</p>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/master.css">
+  <title>Mastah Mynd</title>
+</head>
+
+<body>
+  <div class="container">
+    <div id="gameBoard">
+      <div class="attemptBox">
+        <p id="attemptBox">Attempts:
+          <span></span>
+        </p>
+        <div class="historyList">
+          <p>Previous Guess</p>
+          <p id="history">Awaiting player's guess..</p>
         </div>
-      </form>
+      </div>
+      <div class="inputWrapper" id="mainGuess">
+        <form>
+          <div class="inputWrapper">
+            <input class="numGuess" id="num0" min="0" max="9" autocomplete="off">
+            <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
+            <input class="numGuess" id="num2" min="0" max="9" autocomplete="off">
+            <input class="numGuess" id="num3" min="0" max="9" autocomplete="off">
+          </div>
+          <div class="numSubmit">
+            <div class="btn" onclick="checkAnswer(event)">
+              <p>Guess the number!</p>
+            </div>
+        </form>
+        </div>
+      </div>
     </div>
-    <div class="historyList" id="history"></div>
-  </div>
-  <body>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="js/win.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
-  </body>
+</body>
+
 </html>
