--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee|Short+Stack" rel="stylesheet">
+  <link rel="stylesheet" href="css/fa/css/fontawesome-all.min.css">
   <title>Mastah Mynd</title>
 </head>
 
@@ -12,7 +13,7 @@
   <div class="container">
     <div class="header">
       <h1>Mastah Mynd</h1>
-      <p>Guess the correct number in 10 attempts!</p>
+      <p>Guess the correct number between 0 to 5 in 10 attempts!</p>
     </div>
     <div id="gameBoard">
       <div class="attemptBox">
@@ -20,12 +21,12 @@
           <span id="attemptNum"></span>
         </p>
         <div class="historyList">
-          <p>Previous Guess</p>
+          <p>Previous Guess:</p>
           <p id="history">Awaiting player's guess..</p>
         </div>
       </div>
       <div class="inputWrapper" id="mainGuess">
-        <form>
+        <form id="form">
           <div class="inputWrapper">
             <input class="numGuess" id="num0" min="0" max="9" autocomplete="off">
             <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
@@ -37,14 +38,13 @@
               <p>Guess the number!</p>
             </div>
         </form>
-        <h3 id="hint">
-          2 numbers are between 4 & 5
+        <h3 id="alertBox">
         </h3>
         </div>
       </div>
     </div>
     <footer>
-      <p>Made with lovesign by Leon Ho</p>
+      <p>Made with <i class="fal fa-heart"></i> by <a href="">Leon Ho</a></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="js/win.js" charset="utf-8"></script>
