--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee|Short+Stack" rel="stylesheet">
   <link rel="stylesheet" href="css/fa/css/fontawesome-all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastah Mynd</title>
 </head>
 
@@ -13,7 +14,7 @@
   <div class="container">
     <div class="header">
       <h1>Mastah Mynd</h1>
-      <p>Guess the correct number between 0 to 5 in 10 attempts!</p>
+      <p>Enter the correct 4 digit combination (between 0-5). You have 10 tries to get it right!</p>
     </div>
     <div id="gameBoard">
       <div class="attemptBox">
@@ -44,7 +45,7 @@
       </div>
     </div>
     <footer>
-      <p>Made with <i class="fal fa-heart"></i> by <a href="">Leon Ho</a></p>
+      <p>Made with <i class="fal fa-heart"></i> by <a href="https://github.com/fupuchu/">Leon Ho</a></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="js/win.js" charset="utf-8"></script>
