--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <div class="inputWrapper" id="mainGuess">
         <form id="form">
           <div class="inputWrapper">
-            <input class="numGuess" id="num0" min="0" max="9" autocomplete="off">
-            <input class="numGuess" id="num1" min="0" max="9" autocomplete="off">
-            <input class="numGuess" id="num2" min="0" max="9" autocomplete="off">
-            <input class="numGuess" id="num3" min="0" max="9" autocomplete="off">
+            <input class="numGuess" id="num0" min="0" max="9" maxlength="1" autocomplete="off" type="number">
+            <input class="numGuess" id="num1" min="0" max="9" maxlength="1" autocomplete="off" type="number">
+            <input class="numGuess" id="num2" min="0" max="9" maxlength="1" autocomplete="off" type="number">
+            <input class="numGuess" id="num3" min="0" max="9" maxlength="1" autocomplete="off" type="number">
           </div>
           <div class="numSubmit">
             <div class="btn" onclick="checkAnswer(event)">
