--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/master.min.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee|Short+Stack" rel="stylesheet">
   <link rel="stylesheet" href="css/fa/css/fontawesome-all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
